force-app/main/default/objects/Install_Schedule__c/Install_Schedule__c.object-meta.xml
<CustomObject>
    <description>This object is a subset of RUNS ControlsList data.  
Purpose:  SalesReps are calling Citron Order Desk to confirm when order installations will happen.
This is affecting Order Desk productivity.
Providing a current view of upcoming installations ought to reduce/eliminate Order Desk involvement.

This object is a standalone object.  This object is populated on a fixed schedule via DataLoader

***DELETE THIS OBJECT AND ASSOCIATED BUSINESS/PROCESSES AFTER PROJECT FRESH GO-LIVE***
***INSTALLATION SCHEDULE OUGHT TO BE MADE AVAILABLE AS PART OF PwC FSL IMPLEMENTATION***</description>
    <label>Install Schedule</label>
    <nameField>
        <label>Install Schedule Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>