force-app/main/default/objects/Install_Schedule__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <description>tblHeaderControls.ActionType</description>
    <label>Install Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>