force-app/main/default/objects/Install_Schedule__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <description>tblHeaderControls.Address1</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>