force-app/main/default/objects/Install_Schedule__c/fields/Days_Since_Order_Created_Formula__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Order_Created_Formula__c</fullName>
    <formula>IF( ( TODAY()- OrderDate__c ) &gt;10 &amp;&amp;  ActionType__c = &quot;ORDER - NEW&quot;,
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 10) &amp; &apos;  &apos; &amp; TEXT( (TODAY()- OrderDate__c ) ),
IF( ( TODAY()- OrderDate__c ) &lt;6 &amp;&amp;  ActionType__c = &quot;ORDER - NEW&quot;,
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10) &amp; &apos;  &apos; &amp; TEXT( (TODAY()- OrderDate__c ) ),
IF( ( TODAY()- OrderDate__c ) &gt;=6 &amp;&amp; ( TODAY()- OrderDate__c ) &lt;10  &amp;&amp; ActionType__c = &quot;ORDER - NEW&quot;,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 10, 10) &amp; &apos;  &apos; &amp; TEXT( (TODAY()- OrderDate__c )),
&quot;&quot;
)))

/*This formula displays a 10 x 10 pixel image of a red, yellow, or green, depending on the number of days since the order was created in RUNS [TODAY()- OrderDate__c] - NB, only for &quot;ORDER - NEW&quot; records.*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Order Created</label>
    <type>Text</type>
</CustomField>