force-app/main/default/objects/Install_Schedule__c/fields/Last_Updated_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Formula__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>