force-app/main/default/objects/Install_Schedule__c/fields/PlannedInstallDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedInstallDate__c</fullName>
    <description>tblHeaderControls.PlannedInstallDate</description>
    <inlineHelpText>Installation date is subject to change.</inlineHelpText>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>