force-app/main/default/objects/Install_Schedule__c/fields/Sales_Rep_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Formula__c</fullName>
    <formula>IF(SalesRep__c = &quot;112008&quot;,&quot;Michael Mastrandrea&quot;,
IF(SalesRep__c = &quot;112007&quot;,&quot;Angelo Mastrolacasa&quot;,
IF(SalesRep__c = &quot;112005&quot;,&quot;Paul Van Hooydonk&quot;,
IF(SalesRep__c = &quot;112002&quot;,&quot;Stephanie Cyros&quot;,
IF(SalesRep__c = &quot;112001&quot;,&quot;Christine Mader&quot;,
IF(SalesRep__c = &quot;111123&quot;,&quot;Jeff Huffman&quot;,
IF(SalesRep__c = &quot;111025&quot;,&quot;Lauren Gasbarini&quot;,
IF(SalesRep__c = &quot;111024&quot;,&quot;Carly Bushey&quot;,
IF(SalesRep__c = &quot;111022&quot;,&quot;Luke Siekris&quot;,
IF(SalesRep__c = &quot;111021&quot;,&quot;Andrew Ng&quot;,
IF(SalesRep__c = &quot;111020&quot;,&quot;Marisol Whitley&quot;,
IF(SalesRep__c = &quot;111019&quot;,&quot;Sam Efford&quot;,
IF(SalesRep__c = &quot;111018&quot;,&quot;Eamon Wild&quot;,
IF(SalesRep__c = &quot;111017&quot;,&quot;Anthony Mauro&quot;,
IF(SalesRep__c = &quot;111016&quot;,&quot;David Maxwell&quot;,
IF(SalesRep__c = &quot;111015&quot;,&quot;Carla Kava&quot;,
IF(SalesRep__c = &quot;111014&quot;,&quot;Robin Boswell&quot;,
IF(SalesRep__c = &quot;111013&quot;,&quot;Patrícia Carneiro&quot;,
IF(SalesRep__c = &quot;111010&quot;,&quot;Diego Isaza&quot;,
IF(SalesRep__c = &quot;111009&quot;,&quot;Heather Owen&quot;,
IF(SalesRep__c = &quot;111008&quot;,&quot;Ashley Tucker&quot;,
IF(SalesRep__c = &quot;111007&quot;,&quot;Courtney Kovacs&quot;,
IF(SalesRep__c = &quot;111006&quot;,&quot;Vinesh Lala&quot;,
IF(SalesRep__c = &quot;111005&quot;,&quot;Andrew Coscarella&quot;,
IF(SalesRep__c = &quot;111002&quot;,&quot;Zak Qureshi&quot;,
IF(SalesRep__c = &quot;111001&quot;,&quot;Lillian Begovic&quot;,
IF(SalesRep__c = &quot;122003&quot;,&quot;Stephane Desrochers&quot;,
IF(SalesRep__c = &quot;122004&quot;,&quot;Gingras Guillaume&quot;,
IF(SalesRep__c = &quot;123001&quot;,&quot;David Lamontagne&quot;,
IF(SalesRep__c = &quot;122002&quot;,&quot;Julie Blackburn&quot;,
&quot;-&quot;
))))))))))))))))))))))))))))))

/* display rep name associated with ACCPAC rep number*/</formula>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>