force-app/main/default/objects/Install_Schedule__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <description>tblHeaderControls.SalesRep</description>
    <label>Sales Rep</label>
    <length>40</length>
    <type>Text</type>
</CustomField>