force-app/main/default/objects/Install_Schedule__c/fields/ServiceRep__c.field-meta.xml
<CustomField>
    <fullName>ServiceRep__c</fullName>
    <description>tblHeaderControls.ServiceRep</description>
    <label>Service Rep</label>
    <length>40</length>
    <type>Text</type>
</CustomField>