force-app/main/default/objects/Install_Schedule__c/listViews/Planned_Installations.listView-meta.xml
<ListView>
    <fullName>Planned_Installations</fullName>
    <columns>CompanyName__c</columns>
    <columns>Address1__c</columns>
    <columns>ActionType__c</columns>
    <columns>PlannedInstallDate__c</columns>
    <columns>Sales_Rep_Formula__c</columns>
    <columns>ServiceRep__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>OrderDate__c</columns>
    <columns>Last_Updated_Formula__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Planned Installations</label>
</ListView>